# dice-auth

./: pyproject.toml
auth/: cache.yaml  main.py
